package edu.uees.tutorias.domain;

public enum EstadoHorario {
    DISPONIBLE,
    RESERVADO
}
